Modify project header

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="container mt-5 todo-container">
-    <h1 class="text-center mb-4">Dynamodb Todo App</h1>
+    <h1 class="text-center mb-4">Dynamodb Todo App changed</h1>
 
     <div class="card mb-4">
         <div class="card-header">
